All tab views are full screen and have invisible scrollbars. Some visualization bug fixes

--- a/styles/main.less
+++ b/styles/main.less
@@ -41,25 +41,30 @@ body {
 body .stats {
     background-color: @color-primary-0;
     font-size: 10px;
-    height: 100%;
 
-    float: left;
+    position: absolute;
     top: 0;
     left: 0;
     width: 400px;
+    overflow: hidden;
 
-    table {
-        width: 200px;
-        float: left;
+    .holder {
+        width: 425px;
+        overflow: auto;
+
+        table {
+            width: 200px;
+            float: left;
+        }
     }
 }
 
 .itemTab {
+    position: absolute;
+    top: 0;
+    width: 425px;
+
     background-color: @color-primary-0;
-    width: 405px;
-    margin: 0 10px;
-    float: right;
-    height: 100%;
     overflow: auto;
     font-size: 10px;
 
@@ -233,18 +238,23 @@ body .stats {
     width: 380px;
     overflow: hidden;
 
-    .zone {
-        width: 360px;
-        height: 50px;
-        margin: 10px;
-        font-size: 14px;
-        line-height: 25px;
+    .holder {
+        width: 405px;
+        overflow: auto;
 
-        img {
-            margin-right: 5px;
-            float: left;
-            width: 50px;
+        .zone {
+            width: 360px;
             height: 50px;
+            margin: 10px;
+            font-size: 14px;
+            line-height: 25px;
+
+            img {
+                margin-right: 5px;
+                float: left;
+                width: 50px;
+                height: 50px;
+            }
         }
     }
     .zone:hover {
